--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Righteous", cursive;
 }
 
 body {
@@ -11,5 +13,9 @@ body {
 
 .app-component-main-div {
   min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
   background-color: beige;
 }
