--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,9 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Righteous", cursive;
+  font-family: 'Righteous', cursive;
 }
 
 body {
