--- a/front/src/components/Footer/footer.css
+++ b/front/src/components/Footer/footer.css
@@ -1,6 +1,8 @@
 .footer-component-main-div {
   padding: 15px;
   width: 100%;
+  font-size: 2rem;
+  letter-spacing: 1px;
   display: flex;
   justify-content: center;
   background-color: aqua;
