--- a/front/src/components/Header/header.css
+++ b/front/src/components/Header/header.css
@@ -3,16 +3,17 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: hsla(0, 100%, 50%, 0.5);
+  background-color: hsla(0, 100%, 50%, 0.25);
 }
 
 .header-component-main-h2 {
   font-size: 2rem;
+  font-weight: 700;
   letter-spacing: 1px;
-  color: white;
+  color: red;
   cursor: pointer;
 }
 
 .header-component-main-h2:hover {
-  color: black;
+  color: blue;
 }
