--- a/front/src/pages/LandingPage/landingPage.css
+++ b/front/src/pages/LandingPage/landingPage.css
@@ -1,5 +1,4 @@
 .landing-page-component-main-div {
-  min-height: 100vh;
   width: 100%;
   padding: 10px;
   display: flex;
@@ -22,14 +21,14 @@
   border: none;
   font-size: 2rem;
   font-weight: 700;
-  background-color: red;
-  color: white;
+  background-color: hsla(0, 100%, 50%, 0.25);
+  color: black;
   cursor: pointer;
 }
 
 .landing-page-component-main-button:hover {
-  background-color: aqua;
-  color: red;
+  background-color: red;
+  color: white;
   font-size: 2rem;
   font-weight: 700;
   padding: 10px;
